--- a/general/templates/general/carousel.html
+++ b/general/templates/general/carousel.html
@@ -4,18 +4,12 @@
 		<div class="col">
 			<div id="carousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="/static/images/IMG_1585.JPG" alt="first">
-					</div>
-					<div class="carousel-item">
+               {% for photo in photos %}
+					   <div class="carousel-item">
 
-						<img class="d-block w-100" src="/static/images/IMG_1586.JPG" alt="first">
-					</div>
-					<div class="carousel-item">
-
-						<img class="d-block w-100" src="/static/images/IMG_1587.JPG" alt="first">
-					</div>
-				</div>
+                     <img class="d-block w-100" src="{{photo.image.url}}" alt="first">
+					   </div>
+               {% endfor %}
 				<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previos</span>
