--- a/general/templates/general/header.html
+++ b/general/templates/general/header.html
@@ -1,7 +1,8 @@
 {% block header %}
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/">
-				<img width="100" style="padding-left: 10px;" src="">
+            IM
+				<!--img width="100" style="padding-left: 10px;" src=""-->
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
