--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -5,6 +5,14 @@
 		<meta charset="utf8">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="/static/styles/style.css">
+      <style type="text/css">
+         /*
+         .carousel-inner img{
+            height: 300px;
+            width: auto;
+         }
+         */
+      </style>
 	</head>
 	<body>
 		<header class="sticky-top">
