--- a/general/templates/general/carousel.html
+++ b/general/templates/general/carousel.html
@@ -1,13 +1,13 @@
 <!rm--{% block carousel %}-->
 <div class="container-fluid">
-	<div class="row">
-		<div class="col">
+	<div class="row justify-content-center">
+		<div class="col-md-10">
 			<div id="carousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
                {% for photo in photos %}
 					   <div class="carousel-item">
 
-                     <img class="d-block w-100" src="{{photo.image.url}}" alt="first">
+                     <img class="img-fluid d-block w-160" src="{{photo.image.url}}" alt="first">
 					   </div>
                {% endfor %}
 				<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
