add templates for event and category

--- a/general/templates/general/header.html
+++ b/general/templates/general/header.html
@@ -12,9 +12,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="/news">новости</a>
 				</li>
-				<!--li class="nav-item">
-					<a class="nav-link" href="#">расписание</a>
-				</li-->
+				<li class="nav-item">
+					<a class="nav-link" href="/competitions">соревнования</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/feedback">отзывы</a>
 				</li>
