update event template

--- a/competitions/templates/competitions/entryForm.html
+++ b/competitions/templates/competitions/entryForm.html
@@ -28,11 +28,11 @@
 
                <div class="form-group">
                   <label for="inputCity">Ваш город</label>
-                  <input name="city" type="text" value="" aria-describedby="cityHelp" placeholder="ввеите город" id="inputCity" value="" class="text form-control">
+                  <input name="city" type="text" value="" aria-describedby="cityHelp" placeholder="введите город" id="inputCity" value="" class="text form-control">
                   <small class="form-text text-muted" id="cityHelp">Город, который спортсмен представляет</small>
                </div>
            
-               <button type="submit" class="btn btn-primary">поделиться</button>
+               <button type="submit" class="btn btn-success">поделиться</button>
             </form>
          </div>
       </div>
