--- a/competitions/templates/competitions/participant_form.html
+++ b/competitions/templates/competitions/participant_form.html
@@ -20,7 +20,7 @@
                   <input name="club" placeholder="" type="text" id="inputClub" value="" class="text form-control">
                </div>
                <div class="form-group">
-                  <label class="inputBirthday">Спортивная школа/Клуб</label>
+                  <label class="inputBirthday">Дата рождения</label>
                   <input name="birthday" placeholder="01.01.0001" type="date" id="inputClub" value="" class="text form-control">
                </div>
                <div class="form-group">
@@ -32,7 +32,7 @@
                   </select>
                </div>
  
-               <button type="submit" class="btn btl-success">подать заявку</button>
+               <button type="submit" class="btn btn-success">подать заявку</button>
             </form>
          </div>
       </div>
