--- a/general/templates/general/navbar.html
+++ b/general/templates/general/navbar.html
@@ -9,12 +9,16 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item active">
+				<!--li class="nav-item active">
 					<a class="nav-link" href="/news">новости</a>
-				</li>
+				</li-->
 				<li class="nav-item">
 					<a class="nav-link" href="/competitions">соревнования</a>
 				</li>
+            <li class="nav-item">
+					<a class="nav-link" href="/camps">сборы</a>
+				</li>
+
 				<li class="nav-item">
 					<a class="nav-link" href="/feedback">отзывы</a>
 				</li>
@@ -24,8 +28,8 @@
 				<!--li class="nav-item">
 					<a class="nav-link" href="#">запись</a>
 				</li-->
-				<li class="nav-item">
+				<!--li class="nav-item">
 					<a class="nav-link" href="/about">контакты</a>
-				</li>
+				</li-->
 	</nav>
 {% endblock %}
