--- a/general/templates/general/feedback.html
+++ b/general/templates/general/feedback.html
@@ -51,6 +51,9 @@
                   <label for="inputText">Ваш отзыв</label>
                   <textarea name="text" rows="3" class="form-control" id="inputText"></textarea>
                </div>
+               <div class="form-group">
+                  {{form.captcha}}
+               </div>
                <button type="submit" class="btn btn-primary">поделиться</button>
             </form>
          </div>
