--- a/general/templates/general/posts.html
+++ b/general/templates/general/posts.html
@@ -3,9 +3,11 @@
 	<div class="row">
 		{% for post in posts %}
 		<div class="card col-lg-3 col-sm-10 col-10 m-2 mx-auto" style="width: 18rem;">
-			<img class="card-img-top" src="{{post.image.image.url}}" alt="{{post.image.title}}">
-			<div class="card-body">
-				<h5 class="card-title">{{post.name}}</h5>
+			<!--img class="card-img-top" src="{{post.image.image.url}}" alt="{{post.image.title}}"-->
+         <div class="div-header {% if post.news_type == 'N' %}bg-info{% elif post.news_type == 'E' %} bg-warning {% elif post.news_type == 'C' %}bg-syccess{% endif %} ">
+         {{ post.name }}
+         </div>
+         <div class="card-body">
 				<p>{{post.text}}</p>
 				<a href="#" class="btn btn-primary">disable</a>
 			</div>
